1. 更新注释。 2. 更新sql。 3. 删除多余文件。

--- a/hotel-front/src/app/home/onsale/onsale.component.html
+++ b/hotel-front/src/app/home/onsale/onsale.component.html
@@ -25,8 +25,9 @@
         <!--Text-->
 
         <mdb-card-text>
-          Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam.
+          设施：书桌、熨衣设备、多种规格电源插座、110V电压插座、房内保险箱、空调、衣柜/衣橱、暖气、闹钟、针线包、220V电压插座、遮光窗帘、备用床具
+          床具:鸭绒被、床具:毯子或被子、沙发、开夜床、电子秤、房间内高速上网、客房WIFI、衣架、餐桌、地毯
+          面积：110平方米 楼层：2-4层 窗户：有窗 床型：一张2米大床
         </mdb-card-text>
 
         <a mdbBtn color="unique" class="waves-light" (click)="setRoomNo('豪华城景大床房');bookModal.show()" mdbWavesEffect>立即预定！</a>
@@ -62,8 +63,7 @@
         <!--Text-->
 
         <mdb-card-text>
-          Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam.
+          面积：110平方米 楼层：2-4层 窗户：有窗 床型：一张2米大床
         </mdb-card-text>
 
         <a mdbBtn color="unique" class="waves-light" (click)="setRoomNo('豪华山景大床房');bookModal.show()" mdbWavesEffect>立即预定！</a>
@@ -100,11 +100,10 @@
         <!--Text-->
 
         <mdb-card-text>
-          Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam.
+          面积：110平方米 楼层：2-4层 窗户：有窗 床型：一张2米大床
         </mdb-card-text>
 
-        <a mdbBtn color="unique" class="waves-light" (click)="setRoomNo(23);bookModal.show()" mdbWavesEffect>立即预定！</a>
+        <a mdbBtn color="unique" class="waves-light" (click)="setRoomNo('23');bookModal.show()" mdbWavesEffect>立即预定！</a>
 
       </mdb-card-body>
       <!--/.Card content-->
@@ -132,7 +131,7 @@
         <mdb-card-text> 拖鞋、浴室化妆放大镜、24小时热水、浴衣、独立淋浴间、吹风机、洗浴间电话。
         </mdb-card-text>
 
-        <a mdbBtn color="primary" (click)="setRoomNo(24);bookModal.show()" mdbWavesEffect>立即预定！</a>
+        <a mdbBtn color="primary" (click)="setRoomNo('24');bookModal.show()" mdbWavesEffect>立即预定！</a>
       </mdb-card-body>
     </mdb-card>
   </div>
@@ -154,7 +153,7 @@
         <mdb-card-text> 遮光窗帘、手动窗帘、备用床具、床具:鸭绒被、房间内高速上网、
         </mdb-card-text>
 
-        <a mdbBtn color="primary" (click)="setRoomNo(25);bookModal.show()" mdbWavesEffect>立即预定！</a>
+        <a mdbBtn color="primary" (click)="setRoomNo('25');bookModal.show()" mdbWavesEffect>立即预定！</a>
       </mdb-card-body>
     </mdb-card>
   </div>
@@ -176,7 +175,7 @@
         <mdb-card-text> 多种规格电源插座、空调、闹钟、针线包、220V电压插座、遮光窗帘、手动窗帘、备用床具、床具:鸭绒被、房间内高速上网、客房WIFI免费。
         </mdb-card-text>
 
-        <a mdbBtn color="primary" (click)="setRoomNo(26);bookModal.show()" mdbWavesEffect>立即预定！</a>
+        <a mdbBtn color="primary" (click)="setRoomNo('26');bookModal.show()" mdbWavesEffect>立即预定！</a>
       </mdb-card-body>
     </mdb-card>
   </div>
