--- a/hotel-front/src/app/signin/signin.component.html
+++ b/hotel-front/src/app/signin/signin.component.html
@@ -9,7 +9,7 @@
           <div class="row flex-center  mt-3 w-100">
             <div class="col-md-6 text-center text-md-left mb-5">
               <div>
-                <h2 class="h1 h1-responsive font-bold blue-text">欢迎来到酒店管理信息系统
+                <h2 class="h1 h1-responsive font-bold blue-text">欢迎来到柏悦酒店管理信息系统
                 </h2>
                 <hr class="hr-light">
                 <h6 class="wow fadeInLeft white-text">
