--- a/hotel-front/src/app/home/home.component.html
+++ b/hotel-front/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <!-- 左侧栏 -->
     <div class="col-2 animated fadeInLeft px-0 mr-2" id="sidenav" *ngIf="toggleFlag">
       <nav class="nav nav-pills flex-column light-blue lighten-5 mt-1 z-depth-2">
-        <a class="nav-link my-1 font-weight-bold flex-center mt-3 mb-3" style="font-size: large">酒店管理信息系统</a>
+        <a class="nav-link my-1 font-weight-bold flex-center mt-3 mb-3" style="font-size: large">柏悦酒店管理信息系统</a>
         <a class=" unique-color-dark a1 "></a>
         <a *appHasRole="'ADMIN'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="login"
            routerLinkActive="active">
@@ -12,17 +12,17 @@
         </a>
         <a *appHasRole="'USER'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="book"
            routerLinkActive="active">
-          <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
+          <mdb-icon fas icon="book" class="mr-1 light-blue-text" size="lg"></mdb-icon>
           预定
         </a>
         <a *appHasRole="'USER'" class="nav-link my-2 text-center " mdbWavesEffect routerLink="my-book"
            routerLinkActive="active">
-          <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
+          <mdb-icon fas icon="list-ol" class="mr-1 amber-text" size="lg"></mdb-icon>
           我的订单
         </a>
         <a class="nav-link my-2 text-center " mdbWavesEffect routerLink="onsale"
            routerLinkActive="active">
-          <mdb-icon fas icon="chalkboard-teacher" class="mr-1 amber-text" size="lg"></mdb-icon>
+          <mdb-icon fas icon="chalkboard-teacher" class="mr-1 lime-text" size="lg"></mdb-icon>
           今日特价
         </a>
         <a *appHasRole="'ADMIN'" mdbWavesEffect class="nav-link text-center my-2" routerLink="logout"
